# LibEnum

./: CMakeLists.txt  CMakePresets.json  README.md
LibEnum/: CMakeLists.txt
LibEnum/include/libenum/: CMakeLists.txt  Core.hpp  Enum.hpp
cmake/: LibEnumConfig.cmake  enable_tests.cmake
tests/: CMakeLists.txt
tests/compiletime/: CMakeLists.txt  Main.cpp
